<resources>
    <string name="app_name">Housing Society</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_forum">Forum</string>
    <string name="title_more">More</string>
    <string name="complaint">Complaint</string>
    <string name="book_facility">Book Facility</string>
    <string name="invite_visitor">Invite Visitor</string>
    <string name="dues">Dues</string>
    <string name="update_details">Update Details</string>
    <string name="profile">Profile</string>
    <string name="members">Members</string>
    <string name="leases">Leases</string>
    <string name="staff">Staff</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="title_my_unit">My Unit</string>
    <string name="my_financial">My Financial</string>
    <string name="due">Due :</string>
    <string name="next_due">Next Due :</string>
    <string name="open">Open :</string>
    <string name="closed">Closed :</string>
    <string name="my_unit_members">Members :</string>
    <string name="leases_details">Leases Details :</string>
    <string name="notice_board">Notice Board</string>
    <string name="directory">Directory</string>
    <string name="contacts">Contacts</string>
    <string name="neighbours">Neighbours</string>
    <string name="photos">Photos</string>
    <string name="over_due">Over Due</string>
    <string name="no_data_found">No Data Found</string>
</resources>
