<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.harsh.housingsocienty.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.harsh.housingsocienty.ui.forums.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_my_unit"
        android:name="com.harsh.housingsocienty.ui.myunit.MyUnitFragment"
        android:label="@string/title_my_unit"
        tools:layout="@layout/fragment_my_unit" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.harsh.housingsocienty.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>